tests/baselines/reference/assignToExistingClass.errors.txt
assignToExistingClass.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignToExistingClass.ts(8,13): error TS2629: Cannot assign to 'Mocked' because it is a class.


==== assignToExistingClass.ts (2 errors) ====
    module Test {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class Mocked {
            myProp: string;
        }
    
        class Tester {
            willThrowError() {
                Mocked = Mocked || function () { // => Error: Invalid left-hand side of assignment expression.
                ~~~~~~
!!! error TS2629: Cannot assign to 'Mocked' because it is a class.
                    return { myProp: "test" };
                };
            }
        }
     
    }
    